# visual_novel_engine

./: Readme.MD  bun.lockb  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: menuButton.tsx
src/views/menus/: mainMenu.tsx  optionsMenu.tsx  saveMenu.tsx
src/views/scenes/: mainMenu.tsx  splashScreen.tsx
